syntax = "proto3";

package proto;

option go_package = "/gate";

service Gate {
  rpc GetData(KeyData) returns (ValueData) {}
  rpc DeleteData(KeyData) returns (Result) {}
  rpc UpdateData(Data) returns (Result) {}
}

message KeyData {
  bytes Key = 1;
}

message ValueData {
  bytes Value = 1;
}

message Result {
  bool Success = 1;
}

message Data {
  bytes Key = 1;
  bytes Value = 2;
}