syntax = "proto3";

package raftpb;

option go_package = "/raftpb";

service Raft {
  rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply) {}
  rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply) {}
}

message RequestVoteArgs {
  uint64 Term = 1;
  uint64 CandidateId = 2;
  uint64 LastLogIndex = 3;
  uint64 LastLogTerm = 4;
}

message RequestVoteReply{
  uint64 Term = 1;
  bool VoteGranted = 2;
}

enum MsgType {
  MsgGet = 0;
  MsgUpdate = 1;
  MsgDelete = 2;
}

message Data {
  bytes Key = 1;
  bytes Value = 2;
}

message Entry {
  uint64 Index = 1;
  uint64 Term = 2;
  MsgType type = 3;
  Data data = 4;
}

message AppendEntriesArgs {
  uint64 Term = 1;
  uint64 LeaderId = 2;
  uint64 PreLogIndex = 3;
  uint64 PreLogTerm = 4;
  repeated Entry entries = 5;
  uint64 LeaderCommit = 6;
}

message AppendEntriesReply {
  uint64 Term = 1;
  bool Success = 2;
}